Simplify API attachment uploads
